@@ -1,0 +1,8 @@
+#ifndef MAIN_HPP
+#define MAIN_HPP
+
+#include <iostream>
+#include <datastructures.hpp>
+#include <exception.hpp>
+
+#endif
