@@ -71,5 +71,6 @@ v2.1:
   - new methods: toLower(), toUpper() etc.
   - +-operator overloaded for concatenating the basic types
 - renamed namespace util to utils
-- added classes: Observer, Observable, ChangeNotifier, SmartObserver
+- added classes: Observer, Observable, ChangeNotifier, SmartObserver, RingBuffer
 - renamed class Buffer<T> to class DynamicBuffer<T>
+
